Full system integration, testing started